--- a/style/_mixins.scss
+++ b/style/_mixins.scss
@@ -1,3 +1,8 @@
+@mixin backgroundImage {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
 @mixin button {
   display: flex;
